Bug 120407 - Font Color not set in Format Search & Replace
Summary: Font Color not set in Format Search & Replace
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-10-08 10:56 UTC by Xisco Faulí
Modified: 2018-10-11 08:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (4.04 MB, video/mp4)
2018-10-08 18:56 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-10-08 10:56:57 UTC
Steps to reproduce:
1. Open writer
2. Edit - Find & Replace
3. Expand submenu Other Options - Format
4. Go to Font Effects tab and select a font color

-> it's not set

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 4854acc7929ea58632c5d0f7f80a4adc3c62b8cd
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-10-08 10:57:55 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2018-09-17 12:30:14 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-09-17 18:14:58 +0200
commit c090d2fc981d237a5591a51a94674a35835b706d (patch)
tree 217d366c270f535f43b0f15af02eed0e0854e57d
parent 88582ebee383c63c3fba588924f36ff7655af9c1 (diff)
weld SvxSearchFormatDialog

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2018-10-08 16:36:10 UTC
what exactly is "its not set" ? When I click on the color menu button I get a popup, I select the color, the preview in the menubutton updates to that color and when I click on ok I get "RGB(..., ..., ...)" listed under the find entry.

Is it the color preview inside the color menu button that's awry, we've had problems with gtk 3.18 there before
Comment 3 Xisco Faulí 2018-10-08 18:56:01 UTC
Created attachment 145496 [details]
screencast

@Caolán, I've recorded a screencast to make it clearer
Comment 4 Caolán McNamara 2018-10-10 15:02:26 UTC
only seems to affect that one color selector, not the underline and overline color ones.
Comment 5 Caolán McNamara 2018-10-10 15:16:59 UTC
ah, I see, the popover gets replaced with another one, but we hold onto the one one too.
Comment 6 Commit Notification 2018-10-10 16:34:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3177bcaa10cf2c61427f03f05f1c442bcf744ecb

Resolves: tdf#120407 support popover getting replaced

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-10-11 08:08:15 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 59ed21b1720db5fd0326e1b723483b288725e662
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, thanks for fixing this!