Resolves: tdf#120407 support popover getting replaced

Change-Id: I56f51a5effccd8854361790c68fa11a2cc067aa9
Reviewed-on: https://gerrit.libreoffice.org/61623
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>